<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.habits.fragments.HomeFragment"
        android:label="@string/home_page"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_nav_home_to_editHabitFragment"
            app:destination="@id/editHabitFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.habits.fragments.AboutFragment"
        android:label="@string/about_app"
        tools:layout="@layout/about_fragment" />

    <fragment
        android:id="@+id/editHabitFragment"
        android:name="com.example.habits.fragments.EditFragment"
        android:label="@string/edit"
        tools:layout="@layout/edit_fragment" />

</navigation>