<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".fragments.EditFragment">

    <TextView
        android:id="@+id/newHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/new_habit"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/big_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/name"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newHabit" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/start_margin"
        android:layout_marginEnd="@dimen/start_margin"
        android:background="@color/white"
        android:maxLength="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <TextView
        android:id="@+id/descriptionField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/description"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/start_margin"
        android:layout_marginEnd="@dimen/start_margin"
        android:background="@color/white"
        android:lines="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionField" />

    <TextView
        android:id="@+id/priorityField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/priority"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:entries="@array/priorities"
        android:scrollbarSize="@dimen/scrollbar_size"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/priorityField"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput"/>

    <TextView
        android:id="@+id/typeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/type"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/periodInput"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="19dp"
        android:entries="@array/priorities"
        app:layout_constraintStart_toEndOf="@id/typeField"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput">

        <RadioButton
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:textColor="@color/brown"
            android:textSize="@dimen/radio_button_text" />

        <RadioButton
            android:id="@+id/bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad"
            android:textColor="@color/brown"
            android:textSize="@dimen/radio_button_text" />

    </RadioGroup>

    <TextView
        android:id="@+id/amountField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/repeat_count"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginEnd="@dimen/top_margin"
        android:layout_marginTop="@dimen/start_margin"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountField"
        app:layout_constraintEnd_toStartOf="@id/periodInput"
        android:autofillHints="1" />

    <TextView
        android:id="@+id/periodField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/period"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/periodInput"
        app:layout_constraintTop_toBottomOf="@id/radio" />

    <EditText
        android:id="@+id/periodInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginEnd="@dimen/start_margin"
        android:layout_marginTop="@dimen/start_margin"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/amountInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/periodField"
        android:autofillHints="1" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/dark_red"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/periodInput" />

</androidx.constraintlayout.widget.ConstraintLayout>
